# bevy-vxgi

./: Cargo.toml
.cargo/: config.toml
src/: bundle.rs  main.rs
src/render/: gi_volume.rs  mod.rs  voxelize.wgsl
