[package]
name = "bevy-vxgi"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/cart/bevy", branch="pipelined-rendering", features = ["dynamic"] }

[profile.dev.package.bevy]
opt-level = 3
