[package]
name = "bevy-vxgi"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crevice = { path = "E:/rust/bevy-fork/bevy/crates/crevice" }
bevy = { path = "E:/rust/bevy-fork/bevy", features = ["dynamic"] }

[profile.dev.package.bevy]
opt-level = 3
